tests/e2e/e0053_unexpected_end_of_line2.error
Error: syntax error in story at line 1, column 6

1|    foo .
           ^

E0053: Unexpected end of line. Expected: ['NAME'].
